@@ -36,6 +36,7 @@ importFrom(leaflet,addRasterImage)
 importFrom(leaflet,colorNumeric)
 importFrom(leaflet,expandLimits)
 importFrom(leaflet,getMapData)
+importFrom(leaflet,gridOptions)
 importFrom(leaflet,invokeMethod)
 importFrom(methods,formalArgs)
 importFrom(png,writePNG)
