@@ -3,6 +3,7 @@ leafem 0.2.3.9001 (2024-04-17)
 features and improvements
 
 bug fixes
+  * addStarsImage() now accepts an `option` argument. Requires leaflet >= 2.2.2 #58
 
 documentation etc
 
